OPSMN-5729, OPSMN-5338: Performance improvement - avoided materialisation of positions and enforced slot uniqueness
1) Reduced memory footprint by avoiding eager materialisation of occupiedPositions
   using cached ordinals.

2) Switched add/remove position ops to direct DB writes and also keeping ordinals
   cache in sync.

3) Added queries for occupied ordinals, specific position lookup, reservation lookup,
   and capacity checks.

4) Reworked block/unblock APIs to operate on in‑memory positions for correct bulk
   location updates.

5) Updated empty‑positions report to use cached ordinals instead of full position
   entities.

6) Enforced unique slot occupancy with DB constraints.

7) Refined assignPositions API to use two‑pass vacate/assign with flush, while
   ensuring a single transfer event per specimen by reusing SpecimenTransferEvent.